--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -3371,7 +3371,7 @@ and the derived files
 %   \begin{Version}{2019/12/03 v1.28}
 %   \item
 %     Documentation updates.
-%   \item adjust package loading (all required packages already loade
+%   \item adjust package loading (all required packages already loaded
 %     by \xpackage{hyperref}).
 %   \end{Version}
 %   \begin{Version}{2020-11-06 v1.29}
@@ -3383,7 +3383,7 @@ and the derived files
 %   \item Removed the \xoption{dvipsone} and \xoption{textures} driver.
 %   \item Removed the code for option \xoption{dvipdfmx-outline-open}
 %     and \cs{SpecialDvipdfmxOutlineOpen}. All dvipdfmx version should now support
-%     this out-of-box. 
+%     this out-of-the-box.
 %   \end{Version}
 % \end{History}
 %
