--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -3361,7 +3361,7 @@ and the derived files
 %   \end{Version}
 %   \begin{Version}{2016/05/17 v1.26}
 %   \item
-%     define \cs{pdfbookmark} to allow pdftex driver to be used with Lua\TeX.
+%     define \cs{pdfoutline} to allow pdftex driver to be used with Lua\TeX.
 %   \end{Version}
 %   \begin{Version}{2019/06/04 v1.27}
 %   \item
