--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -2386,7 +2386,7 @@ and the derived files
 %<*pdftex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-pdftex.def}%
-  [2021-01-26 v1.30 bookmark driver for pdfTeX (HO)]%
+  [2021-01-26 v1.30 bookmark driver for pdfTeX and luaTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@DO@entry}
@@ -2997,7 +2997,7 @@ and the derived files
 %    (which is equivalent to the previously used
 %    \cs{AfterLastShipout} of \xpackage{atveryend}'s),
 %    because it still needs the \xext{aux} file. It uses
-%    uses \cs{pdfoutline} for the bookmakrs that can  be used after the last page.
+%    uses \cs{pdfoutline} for the bookmarks that can  be used after the last page.
 %    \begin{itemize}
 %    \item
 %      Driver \xoption{pdftex} uses \cs{pdfoutline} that can
