--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -400,7 +400,7 @@ and the derived files
 % \xoption{dvips} and friends) the package detects it quite late
 % at the end of the document. Since version 2011/04/21 v1.21
 % the package tries printing the line number and file name
-% of the corresponding occurence of \cs{bookmark}.
+% of the corresponding occurrence of \cs{bookmark}.
 % However, \hologo{TeX} does provide the line number, but
 % unhappily the file name is a secret. The package supports
 % some ways to get the file name:
@@ -2952,7 +2952,7 @@ and the derived files
 %    (which is equivalent to the previously used
 %    \cs{AfterLastShipout} of \xpackage{atveryend}'s),
 %    because it still needs the \xext{aux} file. It uses
-%    uses \cs{pdfoutline} for the bookmakrs that can  be used after the last page.
+%    \cs{pdfoutline} for the bookmarks that can  be used after the last page.
 %    \begin{itemize}
 %    \item
 %      Driver \xoption{pdftex} uses \cs{pdfoutline} that can
