--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -1,12 +1,12 @@
 % \iffalse meta-comment
 %
 % File: bookmark.dtx
-% Version: 2021-01-26 v1.30
+% Version: 2023-12-05 v1.30
 % Info: PDF bookmarks
 %
 % Copyright (C)
 %    2007-2011 Heiko Oberdiek
-%    2016-2021 Oberdiek Package Support Group
+%    2016-2023 Oberdiek Package Support Group
 %    https://github.com/ho-tex/bookmark/issues
 %
 % This work may be distributed and/or modified under the
@@ -95,7 +95,7 @@
 \input docstrip.tex
 \Msg{************************************************************************}
 \Msg{* Installation}
-\Msg{* Package: bookmark 2021-01-26 v1.30 PDF bookmarks (HO)}
+\Msg{* Package: bookmark 2023-12-05 v1.30 PDF bookmarks (HO)}
 \Msg{************************************************************************}
 
 \keepsilent
@@ -107,11 +107,11 @@
 This is a generated file.
 
 Project: bookmark
-Version: 2021-01-26 v1.30
+Version: 2023-12-05 v1.30
 
 Copyright (C)
    2007-2011 Heiko Oberdiek
-   2016-2021 Oberdiek Package Support Group
+   2016-2023 Oberdiek Package Support Group
 
 This work may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either
@@ -185,7 +185,7 @@ and the derived files
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bookmark.drv}%
-  [2021-01-26 v1.30 PDF bookmarks (HO)]%
+  [2023-12-05 v1.30 PDF bookmarks (HO)]%
 \documentclass{ltxdoc}
 \usepackage{holtxdoc}[2011/11/22]
 \begin{document}
@@ -199,7 +199,7 @@ and the derived files
 % \GetFileInfo{bookmark.drv}
 %
 % \title{The \xpackage{bookmark} package}
-% \date{2021-01-26 v1.30}
+% \date{2023-12-05 v1.30}
 % \author{Heiko Oberdiek\thanks
 % {Please report any issues at \url{https://github.com/ho-tex/bookmark/issues}}}
 %
@@ -297,7 +297,8 @@ and the derived files
 % \subsubsection{Driver options}
 %
 % Supported drivers are \xoption{pdftex}, \xoption{dvips},
-% \xoption{dvipdfm} (\xoption{xetex}), and \xoption{vtex}.
+% \xoption{dvipdfmx} (\xoption{xetex} and older name 
+% \xoption{dvipdfm}), and \xoption{vtex}.
 % The \hologo{TeX} engines \hologo{pdfTeX}, \hologo{XeTeX},
 % and \hologo{VTeX} are automatically detected.
 % The default for the DVI drivers is \xoption{dvips}. This can
@@ -772,7 +773,7 @@ and the derived files
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{bookmark}%
-  [2021-01-26 v1.30 PDF bookmarks (HO)]%
+  [2023-12-05 v1.30 PDF bookmarks (HO)]%
 %    \end{macrocode}
 %
 % \subsubsection{Requirements}
@@ -1863,7 +1864,7 @@ and the derived files
 %<*dvipdfm>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvipdfm.def}%
-  [2021-01-26 v1.30 bookmark driver for dvipdfm (HO)]%
+  [2023-12-05 v1.30 bookmark driver for dvipdfm (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@id}
@@ -2055,7 +2056,7 @@ and the derived files
 %<*vtex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-vtex.def}%
-  [2021-01-26 v1.30 bookmark driver for VTeX (HO)]%
+  [2023-12-05 v1.30 bookmark driver for VTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -2386,7 +2387,7 @@ and the derived files
 %<*pdftex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-pdftex.def}%
-  [2021-01-26 v1.30 bookmark driver for pdfTeX and luaTeX (HO)]%
+  [2023-12-05 v1.30 bookmark driver for pdfTeX and luaTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@DO@entry}
@@ -2561,7 +2562,7 @@ and the derived files
 %<*dvips>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvips.def}%
-  [2021-01-26 v1.30 bookmark driver for dvips (HO)]%
+  [2023-12-05 v1.30 bookmark driver for dvips (HO)]%
 %    \end{macrocode}
 %    \begin{macro}{\BKM@PSHeaderFile}
 %    \begin{macrocode}
@@ -3434,7 +3435,7 @@ and the derived files
 %     and \cs{SpecialDvipdfmxOutlineOpen}. All dvipdfmx version should now support
 %     this out-of-the-box.
 %   \end{Version}
-%   \begin{Version}{2021-01-26 v1.30}
+%   \begin{Version}{2023-12-05 v1.30}
 %   \item Corrected support for option \xoption{bookmarkstype} of
 %   \xpackage{hyperref}, https://github.com/ho-tex/bookmark/issues/4
 %   \item Added support for structure destinations, https://github.com/ho-tex/bookmark/issues/7   
