--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -2557,7 +2557,7 @@ and the derived files
 % \subsubsection{Driver dvips}
 % The dvips driver uses PSfile to include the bookmark to resolve a
 % clash with pgf, see
-% https://github.com/pgf-tikz/pgf/issues/944#issuecomment-723099952
+% https://github.com/pgf-tikz/pgf/issues/944\#issuecomment-723099952
 %    \begin{macrocode}
 %<*dvips>
 \NeedsTeXFormat{LaTeX2e}
@@ -3041,27 +3041,6 @@ and the derived files
 % \item[\CTAN{macros/latex/contrib/bookmark/bookmark.pdf}] Documentation.
 % \end{description}
 %
-%
-% \paragraph{Bundle.} All the packages of the bundle `bookmark'
-% are also available in a TDS compliant ZIP archive. There
-% the packages are already unpacked and the documentation files
-% are generated. The files and directories obey the TDS standard.
-% \begin{description}
-% \item[\CTANinstall{install/macros/latex/contrib/bookmark.tds.zip}]
-% \end{description}
-% \emph{TDS} refers to the standard ``A Directory Structure
-% for \TeX\ Files'' (\CTANpkg{tds}). Directories
-% with \xfile{texmf} in their name are usually organized this way.
-%
-% \subsection{Bundle installation}
-%
-% \paragraph{Unpacking.} Unpack the \xfile{bookmark.tds.zip} in the
-% TDS tree (also known as \xfile{texmf} tree) of your choice.
-% Example (linux):
-% \begin{quote}
-%   |unzip bookmark.tds.zip -d ~/texmf|
-% \end{quote}
-%
 % \subsection{Package installation}
 %
 % \paragraph{Unpacking.} The \xfile{.dtx} file is a self-extracting
@@ -3082,6 +3061,10 @@ and the derived files
 %   bkm-dvips.def & tex/latex/bookmark/bkm-dvips.def\\
 %   bkm-pdftex.def & tex/latex/bookmark/bkm-pdftex.def\\
 %   bkm-vtex.def & tex/latex/bookmark/bkm-vtex.def\\
+%   bkm-dvipdfm-2019-12-03.def & tex/latex/bookmark/bkm-dvipdfm-2019-12-03.def\\
+%   bkm-dvips-2019-12-03.def & tex/latex/bookmark/bkm-dvips-2019-12-03.def\\
+%   bkm-pdftex-2019-12-03.def & tex/latex/bookmark/bkm-pdftex-2019-12-03.def\\
+%   bkm-vtex-2019-12-03.def & tex/latex/bookmark/bkm-vtex-2019-12-03.def\\
 %   bookmark.pdf & doc/latex/bookmark/bookmark.pdf\\
 %   bookmark-example.tex & doc/latex/bookmark/bookmark-example.tex\\
 %   bookmark.dtx & source/latex/bookmark/bookmark.dtx\\
