--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -25,9 +25,9 @@
 % Heiko Oberdiek and the Oberdiek Package Support Group
 % https://github.com/ho-tex/bookmark/issues
 %
-% This work consists of the main source file bookmark.dtx
-% and the derived files
-%    bookmark.sty, bookmark.pdf, bookmark.ins, bookmark.drv,
+% This work consists of the main source files bookmark.dtx,
+% bookmark-frozen.dtx and bookmark.ins and the derived files
+%    bookmark.sty, bookmark.pdf, 
 %    bkm-dvipdfm.def, bkm-dvips.def,
 %    bkm-pdftex.def, bkm-vtex.def,
 %    bkm-dvipdfm-2019-12-03.def, bkm-dvips-2019-12-03.def,
@@ -40,19 +40,12 @@
 %    CTAN:macros/latex/contrib/bookmark/bookmark.pdf
 %
 % Unpacking:
-%    (a) If bookmark.ins is present:
-%           tex bookmark.ins
-%    (b) Without bookmark.ins:
-%           tex bookmark.dtx
-%    (c) If you insist on using LaTeX
-%           latex \let\install=y\input{bookmark.dtx}
-%        (quote the arguments according to the demands of your shell)
+%    tex/pdftex/pdflatex bookmark.ins
 %
 % Documentation:
-%    (a) If bookmark.drv is present:
-%           latex bookmark.drv
-%    (b) Without bookmark.drv:
-%           latex bookmark.dtx; ...
+%    
+%         (pdf)latex bookmark.dtx; ...
+%         
 %    The class ltxdoc loads the configuration file ltxdoc.cfg
 %    if available. Here you can specify further options, e.g.
 %    use A4 as paper format:
@@ -80,108 +73,6 @@
 %    TDS:source/latex/bookmark/bookmark.dtx
 %    TDS:source/latex/bookmark/bookmark-frozen.dtx
 %
-%<*ignore>
-\begingroup
-  \catcode123=1 %
-  \catcode125=2 %
-  \def\x{LaTeX2e}%
-\expandafter\endgroup
-\ifcase 0\ifx\install y1\fi\expandafter
-         \ifx\csname processbatchFile\endcsname\relax\else1\fi
-         \ifx\fmtname\x\else 1\fi\relax
-\else\csname fi\endcsname
-%</ignore>
-%<*install>
-\input docstrip.tex
-\Msg{************************************************************************}
-\Msg{* Installation}
-\Msg{* Package: bookmark 2023-12-05 v1.30 PDF bookmarks (HO)}
-\Msg{************************************************************************}
-
-\keepsilent
-\askforoverwritefalse
-
-\let\MetaPrefix\relax
-\preamble
-
-This is a generated file.
-
-Project: bookmark
-Version: 2023-12-05 v1.30
-
-Copyright (C)
-   2007-2011 Heiko Oberdiek
-   2016-2023 Oberdiek Package Support Group
-
-This work may be distributed and/or modified under the
-conditions of the LaTeX Project Public License, either
-version 1.3c of this license or (at your option) any later
-version. This version of this license is in
-   https://www.latex-project.org/lppl/lppl-1-3c.txt
-and the latest version of this license is in
-   https://www.latex-project.org/lppl.txt
-and version 1.3 or later is part of all distributions of
-LaTeX version 2005/12/01 or later.
-
-This work has the LPPL maintenance status "maintained".
-
-The Current Maintainers of this work are
-Heiko Oberdiek and the Oberdiek Package Support Group
-https://github.com/ho-tex/bookmark/issues
-
-
-This work consists of the main source file bookmark.dtx and bookmark-frozen.dtx
-and the derived files
-   bookmark.sty, bookmark.pdf, bookmark.ins, bookmark.drv,
-   bkm-dvipdfm.def, bkm-dvips.def, bkm-pdftex.def, bkm-vtex.def,
-   bkm-dvipdfm-2019-12-03.def, bkm-dvips-2019-12-03.def,
-   bkm-pdftex-2019-12-03.def, bkm-vtex-2019-12-03.def,
-   bookmark-example.tex.
-
-\endpreamble
-\let\MetaPrefix\DoubleperCent
-
-\generate{%
-  \file{bookmark.ins}{\from{bookmark.dtx}{install}}%
-  \file{bookmark.drv}{\from{bookmark.dtx}{driver}}%
-  \usedir{tex/latex/bookmark}%
-  \file{bookmark.sty}{\from{bookmark.dtx}{package}}%
-  \file{bkm-dvipdfm.def}{\from{bookmark.dtx}{dvipdfm}}%
-  \file{bkm-dvips.def}{\from{bookmark.dtx}{dvips,pdfmark}}%
-  \file{bkm-pdftex.def}{\from{bookmark.dtx}{pdftex}}%
-  \file{bkm-vtex.def}{\from{bookmark.dtx}{vtex}}%
-  \usedir{doc/latex/bookmark}%
-  \file{bookmark-example.tex}{\from{bookmark.dtx}{example}}%
-  \file{bkm-pdftex-2019-12-03.def}{\from{bookmark-frozen.dtx}{pdftexfrozen}}%
-  \file{bkm-dvips-2019-12-03.def}{\from{bookmark-frozen.dtx}{dvipsfrozen}}%
-  \file{bkm-vtex-2019-12-03.def}{\from{bookmark-frozen.dtx}{vtexfrozen}}%
-  \file{bkm-dvipdfm-2019-12-03.def}{\from{bookmark-frozen.dtx}{dvipdfmfrozen}}%
-}
-
-\catcode32=13\relax% active space
-\let =\space%
-\Msg{************************************************************************}
-\Msg{*}
-\Msg{* To finish the installation you have to move the following}
-\Msg{* files into a directory searched by TeX:}
-\Msg{*}
-\Msg{*     bookmark.sty, bkm-dvipdfm.def, bkm-dvips.def,}
-\Msg{*     bkm-pdftex.def, bkm-vtex.def, bkm-dvipdfm-2019-12-03.def,}
-\Msg{*     bkm-dvips-2019-12-03.def, bkm-pdftex-2019-12-03.def,}
-\Msg{*     and bkm-vtex-2019-12-03.def}
-\Msg{*}
-\Msg{* To produce the documentation run the file `bookmark.drv'}
-\Msg{* through LaTeX.}
-\Msg{*}
-\Msg{* Happy TeXing!}
-\Msg{*}
-\Msg{************************************************************************}
-
-\endbatchfile
-%</install>
-%<*ignore>
-\fi
-%</ignore>
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bookmark.drv}%
@@ -194,9 +85,6 @@ and the derived files
 %</driver>
 % \fi
 %
-%
-%
-% \GetFileInfo{bookmark.drv}
 %
 % \title{The \xpackage{bookmark} package}
 % \date{2023-12-05 v1.30}
@@ -3038,16 +2926,21 @@ and the derived files
 % CTAN\footnote{\CTANpkg{bookmark}}:
 % \begin{description}
 % \item[\CTAN{macros/latex/contrib/bookmark/bookmark.dtx}] The source file.
+% \item[\CTAN{macros/latex/contrib/bookmark/bookmark-frozen.dtx}] Frozen driver files.
+% \item[\CTAN{macros/latex/contrib/bookmark/bookmark.ins}] Installation driver.
 % \item[\CTAN{macros/latex/contrib/bookmark/bookmark.pdf}] Documentation.
 % \end{description}
 %
 % \subsection{Package installation}
 %
-% \paragraph{Unpacking.} The \xfile{.dtx} file is a self-extracting
-% \docstrip\ archive. The files are extracted by running the
-% \xfile{.dtx} through \plainTeX:
+% The easiest is to use the package manager from your TeX system. If
+% you want to install manually:
+% 
+% \paragraph{Unpacking.} The \xfile{.dtx} file is 
+% \docstrip\ archive. The files are extracted from the \xfile{.dtx}
+% by compiling the file with some TeX program.
 % \begin{quote}
-%   \verb|tex bookmark.dtx|
+%   \verb|pdflatex bookmark.dtx|
 % \end{quote}
 %
 % \paragraph{TDS.} Now the different files must be moved into
@@ -3140,25 +3033,8 @@ and the derived files
 % these. For example, \TeX\,Live\ users run \verb|texhash| or
 % \verb|mktexlsr|.
 %
-% \subsection{Some details for the interested}
-%
-% \paragraph{Unpacking with \LaTeX.}
-% The \xfile{.dtx} chooses its action depending on the format:
-% \begin{description}
-% \item[\plainTeX:] Run \docstrip\ and extract the files.
-% \item[\LaTeX:] Generate the documentation.
-% \end{description}
-% If you insist on using \LaTeX\ for \docstrip\ (really,
-% \docstrip\ does not need \LaTeX), then inform the autodetect routine
-% about your intention:
-% \begin{quote}
-%   \verb|latex \let\install=y\input{bookmark.dtx}|
-% \end{quote}
-% Do not forget to quote the argument according to the demands
-% of your shell.
-%
 % \paragraph{Generating the documentation.}
-% You can use both the \xfile{.dtx} or the \xfile{.drv} to generate
+% You can use the \xfile{.dtx} to generate
 % the documentation. The process can be configured by the
 % configuration file \xfile{ltxdoc.cfg}. For instance, put this
 % line into this file, if you want to have A4 as paper format:
