--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 % File: bookmark.dtx
-% Version: 2023-12-05 v1.30
+% Version: 2023-12-10 v1.31
 % Info: PDF bookmarks
 %
 % Copyright (C)
@@ -70,7 +70,7 @@
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bookmark.drv}%
-  [2023-12-05 v1.30 PDF bookmarks (HO)]%
+  [2023-12-10 v1.31 PDF bookmarks (HO)]%
 \documentclass{ltxdoc}
 \usepackage{holtxdoc}[2011/11/22]
 \begin{document}
@@ -81,7 +81,7 @@
 %
 %
 % \title{The \xpackage{bookmark} package}
-% \date{2023-12-05 v1.30}
+% \date{2023-12-10 v1.31}
 % \author{Heiko Oberdiek\thanks
 % {Please report any issues at \url{https://github.com/ho-tex/bookmark/issues}}}
 %
@@ -654,7 +654,7 @@
 %<*package>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{bookmark}%
-  [2023-12-05 v1.30 PDF bookmarks (HO)]%
+  [2023-12-10 v1.31 PDF bookmarks (HO)]%
 %    \end{macrocode}
 %
 % \subsubsection{Requirements}
@@ -1753,7 +1753,7 @@
 %<*dvipdfm>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvipdfm.def}%
-  [2023-12-05 v1.30 bookmark driver for dvipdfm (HO)]%
+  [2023-12-10 v1.31 bookmark driver for dvipdfm (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@id}
@@ -1945,7 +1945,7 @@
 %<*vtex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-vtex.def}%
-  [2023-12-05 v1.30 bookmark driver for VTeX (HO)]%
+  [2023-12-10 v1.31 bookmark driver for VTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -2276,7 +2276,7 @@
 %<*pdftex>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-pdftex.def}%
-  [2023-12-05 v1.30 bookmark driver for pdfTeX and luaTeX (HO)]%
+  [2023-12-10 v1.31 bookmark driver for pdfTeX and luaTeX (HO)]%
 %    \end{macrocode}
 %
 %    \begin{macro}{\BKM@DO@entry}
@@ -2451,7 +2451,7 @@
 %<*dvips>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{bkm-dvips.def}%
-  [2023-12-05 v1.30 bookmark driver for dvips (HO)]%
+  [2023-12-10 v1.31 bookmark driver for dvips (HO)]%
 %    \end{macrocode}
 %    \begin{macro}{\BKM@PSHeaderFile}
 %    \begin{macrocode}
@@ -3301,6 +3301,9 @@
 %    instead the newly added \xfile{.ins} should be used for installation.
 %    https://github.com/ho-tex/bookmark/issues/7
 %   \item Removed the now outdated frozen drivers.  
+%   \end{Version}
+%   \begin{Version}{2023-12-10 v1.31}
+%   \item Updated
 %   \end{Version}
 % \end{History}
 %
