--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -727,6 +727,10 @@
 % \paragraph{Some helper commands}
 % Replaces some commands from ltxcmds:
 % 
+% \begin{macro}{\BKM@ReturnAfterFi}
+% \begin{macro}{\BKM@space}
+% \begin{macro}{\BKM@GlobalAppendToMacro}
+% \begin{macro}{\BKM@LocalAppendToMacro}
 %    \begin{macrocode}
 \ExplSyntaxOn
 \let\BKM@LocalAppendToMacro\tl_put_right:Nn
@@ -735,7 +739,11 @@
 \def\BKM@space{ }
 \long\def\BKM@ReturnAfterFi#1\fi{\fi#1}
 %    \end{macrocode}
-%
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% 
 % \paragraph{Packages.}
 %
 % Don't load packages loaded by xpackage{hyperref}
