document ltxcmds removal

--- a/bookmark.dtx
+++ b/bookmark.dtx
@@ -3305,7 +3305,8 @@
 %   \item Simplified the \xfile{.dtx}. It is no longer a self-extracting archive
 %    instead the newly added \xfile{.ins} should be used for installation.
 %    https://github.com/ho-tex/bookmark/issues/7
-%   \item Removed the now outdated frozen drivers.  
+%   \item Removed the now outdated frozen drivers. 
+%   \item Removed the dependency to ltxcmds. 
 %   \end{Version}
 % \end{History}
 %
